# solana-node-editor

./: .cursorrules  .encryption_key  .env.example  .gitignore  .jwt_secret  NFT_implementation.md  README.md  anchor-dao-notes.md  collaborator-keypair.json  createNFT.md  createTokens.md  devnet_migration.md  docker-compose.yml  final_example_workflow.md  governance_token.json  natural_lang_example_worklows.md  package-lock.json  package.json  repo_desc.txt  tokenNode_overview.md
backend/: Anchor.toml  package-lock.json  package.json  preload.js  test-env.js  test-wallet.json
config/: ai-config.json  solana-config.json
contracts/custom-dao-program/programs/custom-dao-program/: Cargo.toml
contracts/custom-dao-program/programs/custom-dao-program/src/: lib.rs
custom-dao/: Anchor.toml  Cargo.toml
custom-dao/programs/custom-dao/: Cargo.toml
custom-dao/programs/custom-dao/src/: lib.rs
frontend/: config-overrides.js  package-lock.json  package.json
scripts/: start-validator.sh  stop-validator.sh
validator-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-20700-5uWmD7k6TQUHzbTn9juB2DpJL6A84bLYV9CKTa7Ca4ZG.tar.zst  snapshot-20800-3mBKZYoYEcuM2y1WSR3yVJ6AH3RpmBYnr529xUWZDEkL.tar.zst  snapshot-37100-842ZKyvFxTbdUoyRspqbHt1v66TaoaFfjNk6RStVdYh5.tar.zst  snapshot-37200-3cY8QgTwu3QY2jSHs49Zm4batomofroBGjMhksQfTXbA.tar.zst  snapshot-3900-CHBsp9NSZpK6PRStZHUtiwXa2ykQsPUeo2XE4JKo6awQ.tar.bz2  snapshot-400-2nEVNWQ4NhWLh1vYdLGCNoTerMeju19jCPkwgktpym2i.tar.zst  snapshot-4000-5LXNEDLkTNrs2jDNujM4tX2MCFfGRRbNE667c4S3tUSk.tar.bz2  stake-account-keypair.json  (+13 more)
(+478 files in other folders)
