[package]
name = "custom-dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", default-features = false }
anchor-spl = { version = "0.24.2", default-features = false, features = ["token"] }
solana-program = { version = "1.9.29", default-features = false }

[dev-dependencies]
solana-program-test = "1.9.29"
solana-sdk = "1.9.29"
