[package]
name = "custom-dao-program"
version = "0.1.0"
description = "Custom DAO implementation for Solana Node Editor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_dao_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", default-features = false, features = ["derive"] }
anchor-spl = { version = "0.28.0", default-features = false, features = ["token"] }
solana-program = { version = "1.16.0", default-features = false }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
